--- a/app/src/main/res/layout/activity_search_in_pixabay.xml
+++ b/app/src/main/res/layout/activity_search_in_pixabay.xml
@@ -1,36 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="10dp">
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="searchViewModel"
+            type="com.bharadwaja.netmeds.ui.viewmodels.SearchInPixabayViewModel" />
+    </data>
 
-    <EditText
-        android:id="@+id/search_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
-        android:background="@drawable/search_background"
-        android:drawableLeft="@drawable/ic_baseline_search_24"
-        android:hint="Search here"
-        android:imeOptions="actionGo"
-        android:inputType="text" />
-
-
-    <TextView
-        android:id="@+id/no_results"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="No results available" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:baselineAligned="false" />
+        android:orientation="vertical"
+        android:padding="10dp">
 
 
-</LinearLayout>
+        <EditText
+            android:id="@+id/search_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:background="@drawable/search_background"
+            android:drawableLeft="@drawable/ic_baseline_search_24"
+            android:hint="Search here"
+            android:imeOptions="actionGo"
+            android:inputType="text" />
+
+
+        <TextView
+            android:id="@+id/no_results"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No results available" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:baselineAligned="false" />
+
+
+    </LinearLayout>
+</layout>
