--- a/app/src/main/res/layout/activity_image_details_layout.xml
+++ b/app/src/main/res/layout/activity_image_details_layout.xml
@@ -60,7 +60,7 @@
             android:layout_weight="1">
 
             <ImageView
-                android:id="@+id/iv_original_photo"
+                android:id="@+id/iv_original_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </LinearLayout>
