--- a/app/src/main/res/layout/activity_search_in_pixabay_layout.xml
+++ b/app/src/main/res/layout/activity_search_in_pixabay_layout.xml
@@ -13,6 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical"
         android:padding="10dp">
 
@@ -25,6 +26,7 @@
             android:background="@drawable/search_background"
             android:drawableLeft="@drawable/ic_baseline_search_24"
             android:hint="@string/search"
+            android:textColor="@color/black"
             android:imeOptions="actionGo"
             android:inputType="text" />
 
@@ -32,6 +34,7 @@
         <TextView
             android:id="@+id/no_results"
             android:layout_width="wrap_content"
+            android:textColor="@color/black"
             android:layout_height="wrap_content"
             android:text="@string/no_results_available" />
 
@@ -39,6 +42,7 @@
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/white"
             android:baselineAligned="false" />
 
 
